# beacon-wms

./: .gitignore  README.md  build-rust.cmd  clear-layers.cmd  compose-up-build.cmd  docker-compose.yml  index.html  package-lock.json  package.json  run-dev.cmd  test-map.html  update-layers.cmd
conf/: config.json
config/: colormaps.json  config.cdi.json  config.ihm.json  config.json  config_original.json
node-backend/: .gitignore  Dockerfile  Dockerfile.dev  package-lock.json  package.json  tsconfig.json
node-backend/conf/: config.json
node-backend/src/: index.ts
node-backend/src/service/: admin.ts  beacon-wms.ts  config.ts  logger.ts  routes.ts  utils.ts  wms-xml.ts
node-backend/src/types/: config.ts  ogc-wms.ts
node-backend/templates/: index.ejs  viewparams.ejs.js  wms-error.ejs  wms-getcapabilities.ejs
rust-backend/: Cargo.toml  Dockerfile  Dockerfile.dev  run-rust.cmd
rust-backend/src/: appender.rs  data_utils.rs  image_utils.rs  main.rs  misc.rs  queries.rs  query_parameters.rs  request_profiling.rs  viewparams.rs
rust-backend/src/beacon_api/: mod.rs
rust-backend/src/boundingbox/: mod.rs
rust-backend/src/cache_engine/: mod.rs
rust-backend/src/color_maps/: mod.rs
rust-backend/src/config/: mod.rs
rust-backend/src/errors/: mod.rs
rust-backend/src/legend/: mod.rs
rust-backend/src/map_drawing/: mod.rs
rust-backend/src/map_querying/: get_feature_info_collection.rs  mod.rs
rust-backend/src/tile_cache/: mod.rs
test/: README.md  index.html
