[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
log4rs = "1.0.0"
log = "0.4.14"
imageproc = "0.23.0"
image = "0.24.5"
libmath = "0.2.1"
rand = "0.8.5"
font-loader = "0.11.0"
rusttype = "0.9.3"
serde = "1.0.152"
serde_json = "1.0.91"
serde_arrays = "0.1.0"
statrs = "0.16.0"
chrono = "0.4.23"
thiserror = "1.0.38"
ordered-float = "3.4.0"
arrow = "55.*"
parquet = "55.*"
num-traits = "0.2.19"
proj4rs =  { version = "0.1.3", features = ["crs-definitions"] }
crs-definitions = "0.3.0"
lru = "0.12.4"
dotenv = "0.15.0"
lazy_static = "1.5.0"
log-panics = "2.1.0"
reqwest = { version = "0.12", features = ["blocking", "json", "stream"]}
zstd = "0.13.3"
futures = "0.3.31"
indexmap = "2.11.4"